# bene-snake

./: .env.example  Cargo.toml  Dockerfile  Justfile  Kraftfile  README.md  docker-compose.yml
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: bench.yml  ci.yml
battlesnake-game-types/: Cargo.toml
battlesnake-game-types/.github/workflows/: bench.yml  ci.yml
battlesnake-game-types/benches/: pea_eater.rs  start_of_game_compact.rs
battlesnake-game-types/src/: types.rs
battlesnake-game-types/src/compact_representation/core/: simulate.rs
battlesnake-game-types/src/compact_representation/core/cell_board/: eval.rs  mod.rs  snake_body_gettable.rs
battlesnake-game-types/src/compact_representation/standard/: mod.rs
battlesnake-game-types/src/compact_representation/wrapped/: mod.rs
battlesnake-game-types/src/hazard_algorithms/: mod.rs
bs_nnue/: Cargo.toml
bs_nnue/src/: lib.rs  scraper.rs
gym/: Cargo.toml
gym/src/: lib.rs  main.rs  runner.rs  stats.rs
gym/src/agents/: heuristic_agent.rs  minimax_agent.rs  mod.rs  random_agent.rs
lib/: Cargo.toml
lib/benches/: mcts_best_child.rs  mcts_expand.rs  mcts_rollout.rs  movegen.rs
lib/src/: agent.rs  eval.rs  lib.rs  mcts.rs  minimax_new.rs  non_pushable_queue.rs  tree.rs
src/: engine.rs  main.rs
