workspace = { members = ["bs_nnue", "lib"] }
[package]
name = "bene-snake"
version = "0.1.1"
authors = ["Nereuxofficial <37740907+Nereuxofficial@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"
edition = "2021"

[dependencies]
lib = { path = "lib" }
color-eyre = "0.6.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
dotenvy = "0.15.7"
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7.7", features = ["macros"] }
battlesnake-game-types = { git = "https://github.com/Nereuxofficial/battlesnake-game-types", rev = "eadfb55f1edb0b9cbcd4e19bde89b47991c80ce0" }
serde = "1.0"
simd-json = "0.14"
serde_json = "1.0"
sentry = "0.33"
divan = "0.1.14"
# Faster allocator
mimalloc = { version = "0.1", default-features = false }
opentelemetry = { version = "0.18.0", features = [
    "rt-tokio",
], default-features = false }
opentelemetry-otlp = { version = "0.11.0", features = [
    "http-proto",
    "reqwest-rustls",
    "reqwest-client",
], default-features = false }
tracing-opentelemetry = "0.18.0"
tracing-tree = "0.3.1"
sentry-tracing = "0.33"

[features]
bench = ["lib/bench"]
caching = ["lib/caching"]

[profile.release]
lto = true
