[workspace]
members = ["lib"]
[workspace.dependencies]
battlesnake-game-types = { path = "./battlesnake-game-types" }

[package]
name = "bene-snake"
version = "0.1.1"
authors = ["Nereuxofficial <37740907+Nereuxofficial@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"
edition = "2021"

[dependencies]
lib = { path = "lib" }
color-eyre = "0.6.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
dotenvy = "0.15.7"
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
battlesnake-game-types = { workspace = true }
serde = "1.0"
simd-json = "0.14"
serde_json = "1.0"
sentry = { version = "0.33", default-features = false, features = ["backtrace", "contexts", "panic", "anyhow", "reqwest", "rustls", "debug-images"] }
# Faster allocator
mimalloc = { version = "0.1", default-features = false }
tracing-tree = "0.3.1"
sentry-tracing = "0.33"

[features]
default = []
bench = ["lib/bench"]

[profile.release]
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
opt-level = 3
