[package]
name = "bs_nnue"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scraper"
path = "src/scraper.rs"

[dependencies]
tch = { version = "0.15.0", features = ["download-libtorch"] }
battlesnake-game-types = { workspace = true }
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = "1.0.197"
serde_json = "1.0.114"
