[package]
name = "gym"
version = "0.1.0"
edition = "2024"
description = "Benchmarking gym for pitting bene-snake against other snake implementations"

[dependencies]
lib = { path = "../lib" }
battlesnake-game-types = { workspace = true }
rand = { version = "0.9", features = ["simd_support"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
indicatif = "0.17"
tabled = "0.17"
colored = "3"

[[bin]]
name = "snake-gym"
path = "src/main.rs"
