[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "movegen"
harness = false

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.40"
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.4", features = ["macros"] }
battlesnake-game-types = "0.17.0"
serde = "1.0.197"
simd-json = "0.13.8"
serde_json = "1.0.114"
sentry = "0.32.2"
cached = "0.49.2"
rayon = "1.9"
divan = { version = "0.1.14", optional = true }

# Performance
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
panic = "abort"

[features]
bench = ["divan"]
