[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "movegen"
harness = false

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.40"
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.4", features = ["macros"] }
battlesnake-game-types = { git = "https://github.com/Nereuxofficial/battlesnake-game-types" }
serde = "1.0.197"
simd-json = "0.13.8"
serde_json = "1.0.114"
sentry = "0.32.2"
divan = { version = "0.1.14" }
once_cell = "1.19.0"
dashmap = "5.5.3"
ahash = { version = "0.8.10" }
minimax = "0.5.3"
rayon = "1.10.0"

# Performance
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
panic = "abort"

[features]
bench = []
caching = []
