[package]
name = "lib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
tracing = "0.1.40"
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.4", features = ["macros"] }
battlesnake-game-types = { workspace = true }
serde = "1.0.197"
simd-json = "0.13.8"
serde_json = "1.0.114"
divan = { version = "0.1.14" }
once_cell = "1.19.0"
dashmap = "5.5.3"
ahash = { version = "0.8.10" }
minimax = "0.5.3"
rayon = "1.10.0"
rand = { version = "0.9.2", features = ["simd_support"] }

[dev-dependencies]
criterion = "0.4"

[features]
bench = []

[[bench]]
name = "mcts_rollout"
harness = false
